登录logo及首页logo改为北航

--- a/src/main/webapp/sonneteck/pages/login.html
+++ b/src/main/webapp/sonneteck/pages/login.html
@@ -1,8 +1,10 @@
 <toaster-container></toaster-container>
 <div class="login-block vh-center">
     <div class="login-topimg">
-        <img src="./images/sonneteck-logo.png" alt="sonneteck">
-        <span>Sonneteck  IOT  Administrator  System</span>
+        <!--<img src="./images/sonneteck-logo.png" alt="sonneteck">-->
+        <img src="./images/tsingsky.png" alt="">
+        <!--<span>Sonneteck  IOT  Administrator  System</span>-->
+        <span>Beijing Tsingsky  IOT  Administrator  System</span>
     </div>
     <div class="login-form" cg-busy="{promise:loginProm,templateUrl:templateUrl,message:message,backdrop:backdrop,delay:delay,minDuration:minDuration}">
         <form name="loginForm" ng-submit="login(credentials)">
