--- a/src/main/webapp/sonneteck/pages/regional-view/regional.html
+++ b/src/main/webapp/sonneteck/pages/regional-view/regional.html
@@ -1,6 +1,6 @@
 <div login-dialog ng-if="!isLoginPage"></div>
 
-<div class="container">
+<div class="container" style="margin-top: 15px">
     <div class="col-md-6"  ng-repeat="regionData in RegionAndSensorData">
         <div class="regional">
             <!--<div class="check">
