--- a/src/main/webapp/sonneteck/pages/topNav.html
+++ b/src/main/webapp/sonneteck/pages/topNav.html
@@ -3,9 +3,11 @@
         <nav class="navbar">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a class="navbar-brand" href="javascript:void(0);">
-                    <img src="./images/sonneteck-logo.png" alt="sonneteck">
-                </a>
+                <!--<a class="navbar-brand" href="javascript:void(0);">-->
+                    <!--&lt;!&ndash;<img src="./images/sonneteck-logo.png" alt="sonneteck">&ndash;&gt;-->
+                    <!--<img src="./images/tsingsky-index.png" style="height: 300%" alt=" ">-->
+                <!--</a>-->
+                <img src="./images/tsingsky-index.png" style="height: 70px" alt=" ">
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
